Wersja ostateczna z nieustawionym nierozdzielaniem jednoliterowych wyrazow na koncu linii i nieoddzielaniem np. -np.- od tego co po nim nastepuje.

--- a/thesis/01Wprowadzenie.tex
+++ b/thesis/01Wprowadzenie.tex
@@ -7,27 +7,28 @@
 \subsection{Problem}
 \label{Chapter111}
 
-Ankieta\footnote{\cite{Wiki:BA}\cite{IP:Awbi}} pozwala na nieinwazyjne, anonimowe i~masowe pozyskiwanie opinii respondentów na zadany temat, a~dzięki zastosowaniu różnych metod statystycznych, także na ocenę zdania całej populacji. W kontekście każdej jednostki, zrzeszającej większą grupę osób, jak zakład pracy, czy jednostka szkolnictwa wyższego, jaką jest Politechnika Poznańska, ankietowanie jest niezwykle potrzebne, celem zapewnienia prawidłowej pracy. Bez~informacji zwrotnej (ang.~\definicja{feedback}) praktycznie nie ma możliwości precyzyjnej analizy poprawności podejmowanych działań, co~w~konkretnych sytuacjach może sprzyjać pojawieniu się niespodziewanej fali problemów. Za~przykład może posłużyć sytuacja, gdy nie posiadając wiedzy o zapotrzebowaniach studentów, władze uczelni dokonują nieprawidłowego zakupu, np.~oprogramowania do~sali laboratoryjnej. Innym przykładem mogą być ankiety przeprowadzane bezpośrednio po zajęciach -- dzięki nim, prowadzący może poznać preferencje studentów odnośnie tego, które części wykładu były najbardziej interesujące, a które powinny zostać dopracowane. \\
+W kontekście każdej organizacji, zrzeszającej większą grupę ludzi, takiej jak zakład pracy, czy jednostka szkolnictwa wyższego, jaką jest Politechnika Poznańska, niezbędne jest systematyczne badanie efektywności programów nauczania, sposobu kształcenia oraz celowości inwestycji. Przykładowo, brak wiedzy o potrzebach studentów i wykładowców dotyczących wyposażenia laboratoriów, sal wykładowych, programów komputerowych, może prowadzić do zbędnych zakupów, a tym samym do ponoszenia niepotrzebnych kosztów. Najprostszym i najbardziej popularnym narzędziem prowadzenia badań jest ankieta\footnote{\cite{Wiki:BA}\cite{IP:Awbi}}. Pozwala ona na nieinwazyjne, anonimowe i~masowe pozyskiwanie opinii respondentów na zadany temat, a~dzięki zastosowaniu odpowiednich metod statystycznych, także na ocenę zdania całej populacji. \\
 
-W ostatnich latach\footnote{Mowa o~okresie 2008-2013, który jest znany autorom niniejszej Pracy Dyplomowej.} Politechnika Poznańska posiadała szerokie spektrum narzędzi do pozyskiwania wiedzy o~swoim działaniu i~oferowanych usługach, funkcjonujących w zgodzie ze Statutem Politechniki Poznańskiej\footnote{Zapis dotyczący dokonywania oceny nauczyciela akademickiego z~uwzględnieniem oceny studentów\cite{AP:SPP11}.}. Niestety, gros~z~nich wzajemnie się wykluczał. Przykładowy student na Wydziale Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i~Zarządzania} poddawany był ankietom: elektronicznym na~poziomie Uczelni oraz Wydziału, ,,papierowym'' na~poziomie Uczelni oraz~Samorządu Studentów, a~ponadto, dodatkowej ankietyzacji w~ramach niektórych zajęć dydaktycznych. \\
+Biorąc pod uwagę ostatnie lata (2008-2012)\footnote{Mowa o~okresie, który jest znany autorom niniejszej pracy dyplomowej.}, w zgodzie ze statutem\footnote{Zapis dotyczący dokonywania oceny nauczyciela akademickiego z~uwzględnieniem oceny studentów\cite{AP:SPP11}.}, Politechnika Poznańska wykorzystywała szerokie spektrum narzędzi do pozyskiwania wiedzy o efektach podejmowanych działań. Jednak z uwagi na brak odpowiedniego systemu zapewniającego wymierność wyników (np.~uniemożliwienie wielokrotnego udziału pojedynczej osoby w ankiecie, zablokowanie możliwości wypełnienia ankiety przez studenta innego wydziału\slash kierunku, itp.), uzyskane informacje mogły przyczyniać się do błędnej interpretacji sytuacji. Dla zobrazowania dotychczasowego systemu badania, posłuży przykład ankietowania studentów Wydziału Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i~Zarządzania.}. Student był poddawany badaniom ankietowym w formie elektronicznej na poziomach uczelni i wydziału, formie papierowej przeprowadzanej przez Samorząd Studentów na potrzeby uczelni, oraz dodatkowym ankietom w ramach niektórych zajęć dydaktycznych. \\
 
-Żaden spośród tych ,,systemów'' ankietyzacji nie posiadał odpowiednich zabezpieczeń, wymaganych do~zapewnienia wymierności ich wyników (jak np.~zagwarantowanie, aby~nikt nie wziął w~ankiecie udziału więcej niż jeden raz, czy~uniemożliwienie wypełnienia ankiety przeznaczonej dla~innego wydziału, kierunku). Brak wymiernych efektów udziału w tych badaniach, podobnie jak~ich mnogość i dezorientacja związana z~pytaniem ,,kto tak naprawdę pozyskuje informacje'', działały tu na~niekorzyść ankietujących. \\
-
-\textit{Ustawa o~Szkolnictwie Wyższym} wymaga od~uczelni wyższych badania nie tylko aktualnej społeczności studenckiej, lecz~także jej absolwentów\footnote{\cite{AP:PoSW05}}. Sprawdzane powinny być takie czynniki, jak rozwój karier czy satysfakcja z zapewnianych usług. Niestety, na~Politechnice Poznańskiej brakuje odpowiednich narzędzi do prowadzenia tego rodzaju analiz, w~szczególności, że~dotychczasową grupą docelową wszelkich badań i ankiet byli jedynie aktualni studenci. Nawiązując więc do~wcześniejszych twierdzeń, w~konsekwencji niespełnienia wymagań określonych w Ustawie i~braku odpowiednich mechanizmów prowadzenia badań, mogłoby zaistnieć prawdopodobieństwo wystąpienia spadku jakości usług świadczonych przez uczelnię, a~co za tym idzie, także jej prestiżu.
+Wyniki ankiet realizowanych w ramach wyżej wymienionych systemów prowadzenia badań nie były ze sobą porównywane, a co za tym idzie, nie mogły dać pełnego obrazu panującej sytuacji. Samo wdrożenie badań nie umożliwiało wyciągnięcia konstruktywnych wniosków. Brak odpowiednich mechanizmów analizy ich wyników, generował zagrożenie wystąpienia spadku jakości usług świadczonych przez uczelnię, a~co za tym idzie, także jej prestiżu.
 
 \subsection{Proponowane rozwiązanie}
 \label{Chapter112}
 
-Najłatwiejszym, a~zarazem -- w~opinii autorów niniejszego dokumentu -- najlepiej popartym logicznymi argumentami rozwiązaniem, jest stworzenie jednego, jednolitego, globalnego i prostego w obsłudze systemu prowadzenia badań i~ankiet dla różnych grup docelowych, obejmujących wszystkich aktualnych i~byłych studentów Politechniki Poznańskiej. Aby zapewnić dostępność oraz prostotę wdrożenia systemu, który~na to pozwoli, zostanie on wykonany za pomocą technologii internetowych, co umożliwi też jego obsługę z użyciem dowolnej popularnej przeglądarki internetowej dostępnej na~rynku. \\
+Punktem wyjścia jest stworzenie jednego, globalnego, prostego w obsłudze systemu o nazwie \textit{iQuest}, służącego do prowadzenia badań ankietowych dla różnych grup docelowych, obejmujących zarówno aktualnych studentów oraz absolwentów Politechniki Poznańskiej. Będzie on współpracować z uczelnianym systemem raportowania, umożliwiającym wygodne pozyskiwanie informacji na zadany temat. \\
 
-W~trakcie analizy problemu ustalono, że koniecznym będzie także zapewnienie swojego rodzaju ,,zachęty'' dla potencjalnych respondentów -- o~ile bowiem studentowi może zależeć na rozwoju jego uczelni, o~tyle absolwent nie~będzie czerpał z~tego tytułu żadnych wymiernych korzyści. Wybrane dla~systemu iQuest rozwiązanie obejmuje więc też element zachęcający do korzystania z systemu, jakim jest udzielanie użytkownikom spoza uczelni dostępu do~unikalnych materiałów dydaktyczno-naukowych. \\
+Dla zapewnienia bezproblemowego wdrożenia systemu oraz jego dostępności, zostanie on wykonany za pomocą technologii internetowych. Umożliwi to jego obsługę z użyciem dowolnej popularnej przeglądarki internetowej dostępnej na~rynku. \\
 
-Aby~zapewnić, że~pozyskane w~badaniach dane są~prawidłowe, w~proponowanym rozwiązaniu znajdą się systemy autoryzacji osób ankietowanych. Jest~to jednak jedyny element wymagający sprawdzenia tożsamości respondenta -- same wyniki będą dla~ankietera całkowicie anonimowe.
+Ważnym elementem proponowanego rozwiązania jest objęcie badaniami również absolwentów uczelni. W zamian za wzięcie udziału w badaniach, uzyskają oni dostęp do~unikalnych materiałów dydaktyczno-naukowych. \\
+
+Przeprowadzane badania będą anonimowe. Jednakże, w celu zapewnienia prawidłowości i miarodajności wyników, niezbędne jest wprowadzenie mechanizmów uwierzytelniania użytkowników systemu. Ich autoryzacja będzie obejmować jedynie kwestię dostępu do badań i materiałów -- dla ankietera, wyniki będą pozbawione danych identyfikujących poszczególnych respondentów.
 
 \section{Ograniczenia i zagrożenia dla projektu}
 \label{Chapter12}
 
-W zależności od punktu widzenia, z jakiego projekt \textit{iQuest} podda się analizie, wskazać można różne zestawy ograniczeń i zagrożeń dla jego realizacji. Dla przykładu, rozpatrując tę kwestię ze strony klienta, ważna może być kwestia zachęty studentów i absolwentów Uczelni do korzystania z systemu. Dla zespołu programistów, którzy są jednocześnie autorami niniejszej pracy dyplomowej, będzie to sprawa poboczna, niezwiązana z realizacją wymagań funkcjonalnych\footnote{Rozdział \ref{Chapter3}. - Wymagania funkcjonalne.}. Zdecydowano więc o analizie jedynie ograniczeń i zagrożeń związanych ze stroną implementacyjną projektu, przy uwzględnieniu następujących definicji:
+Analizie podano jedynie ograniczenia i zagrożenia związane ze stroną implementacyjną projektu, z uwzględnieniem następujących definicji:
+
 \begin{description}
 \item[Ograniczenie] -- granica, której przekroczenie jest niemożliwe lub zakazane. Obejmuje np. ograniczenia technologiczne oraz narzucone z góry przez osoby o kompetencjach decyzyjnych w kwestiach związanych z projektem.
 \item[Zagrożenie] -- sytuacja lub fakt mogący negatywnie wpłynąć na realizację projektu.
@@ -36,30 +37,28 @@ W zależności od punktu widzenia, z jakiego projekt \textit{iQuest} podda się 
 \subsection{Ograniczenia}
 \label{Chapter121}
 
-System \textit{iQuest} realizowany jest na zlecenie Dziekana Wydziału Informatyki. Z tego względu, musi on podlegać szerokiemu spektrum wymagań ze strony takich organów, jak DRO (\definicja{Dział Rozwoju Oprogramowania}). Jednym z nich jest konieczność stosowania rozwiązań ,,otwartych'' (ang. \definicja{open}) oraz ,,wolnych'' (ang. \definicja{free}). Znacząco zawęża to możliwe do zastosowania technologie i zasoby. \\
+System \textit{iQuest} realizowany jest dla Wydziału Informatyki. W związku z tym musi on spełniać szerokie spektrum wymagań ze strony takich organów, jak Dział Rozwoju Oprogramowania (DRO), Biuro Analiz i Rozwoju Usług (BAiRU), czy Dział Obsługi i Eksploatacji (DOiE). Jednym z warunków jest konieczność stosowania rozwiązań ,,otwartych'' (ang. \definicja{open}) oraz ,,wolnych'' (ang. \definicja{free}), co znacząco zawęża możliwe do zastosowania technologie i zasoby. \\
 
-Za poboczne ograniczenie można uznać z góry narzucony harmonogram prac. Zespół programistów mógł składać się z nie więcej niż 4 osób, co ogranicza liczbę możliwych do przepracowania roboczogodzin. Uwzględniając przy tym, że zespół ten realizował tego typu zadanie po raz pierwszy, weryfikacja możliwości realizacji tego harmonogramu nie była prosta.
+Za poboczne ograniczenie, ale mające istotny wpływ na przebieg prac, należy uznać z góry narzucony harmonogram, oraz restrykcje co do wielkości zespołu programistów.
 
 \subsection{Zagrożenia}
 \label{Chapter122}
 
-Zagrożeniem dla projektu mógł być brak wcześniejszego doświadczenia zespołu przy realizacji tego rodzaju projektów. W początkowych fazach projektu sądzono więc, że nieznajomość technologii może przyczynić się do powstania ciężkich do przekroczenia barier. Jak się jednak okazało, powyższe zagrożenie okazało się mało istotne, gdyż zespół dynamicznie przystosowywał się do sytuacji, brak doświadczenia nadrabiając umiejętnością szybkiej nauki. Pomimo tego, w dalszym ciągu, wykonawcy pozostają studentami Politechniki Poznańskiej, a nie wyspecjalizowaną grupą płatnych fachowców, co nadal mogło zaważyć na jakości wytworzonego oprogramowania. \\
+Mimo braku wcześniejszego doświadczenia zespołu przy realizacji tego rodzaju projektów, zespół dynamicznie przystosowywał się do sytuacji, wykazując umiejętność szybkiego uczenia się. W dalszym ciągu zagrożeniem pozostaje fakt, że wykonawcami projektu są studenci uczelni technicznej, a nie wykwalifikowani specjaliści w dziedzinie technologii internetowych, posiadający wieloletnią praktykę w realizacji podobnych zadań. \\
 
-W nawiązaniu do powyższego zagrożenia, na drodze programistów stała jednak jedna poważna przeszkoda -- niekompletność dokumentacji dotyczącej niektórych systemów i technologii zastosowanych w projekcie. \\
-
-Najpoważniejszym problemem okazały się jednak niespodziewane zmiany w specyfikacji projektu oraz w wymaganiach klienta w trakcie tworzenia systemu.
+Poważną przeszkodą jest niekompletność dokumentacji niektórych systemów i technologii niezbędnych w projekcie\footnote{Rozwinięcie tej kwestii znajduje się w rozdziałach \ref{Chapter6}. oraz \ref{Chapter8}.} oraz niespodziewane zmiany w specyfikacji projektu i wymaganiach klienta, występujące w trakcie jego realizacji.
 
 \subsection{Wpływ ograniczeń i zagrożeń na projekt}
 \label{Chapter123}
 
-Decyzja o zastosowaniu konkretnych typów technologii zdecydowała o bardzo wielu aspektach projektu, poczynając od tego, czy realizowany będzie on od podstaw, czy na podstawie innego systemu. Było to dość istotne i miało swoje odzwierciedlenie na liście zagrożeń -- o ile bowiem rozwiązania komercyjne są nierzadko doskonale udokumentowane przez ich twórców, o tyle te darmowe często opisuje tzw. ,,społeczność'', co wpływa na kompletność i jakość dostępnych treści. Wiążąc to z brakiem wcześniejszego doświadczenia, nawet pomimo umiejętności szybkiego uczenia się nowości, sprawiało to niemałe problemy -- trudno nauczyć się czegoś, czego nigdzie nie opisano w sposób umożliwiający łatwą naukę. Często wymuszało to realizację zadań na zasadzie ,,prób i błędów'', co wpływało na ich czas realizacji. \\
+Narzucona decyzja o zastosowaniu konkretnych typów technologii (rozwiązania ,,wolne i otwarte''), dokumentowanych nie przez wyspecjalizowanych fachowców, lecz tzw. ,,społęczność'' (ang. \definicja{community}), wymusiła konieczność oparcia wielu działań na metodzie ,,prób i błędów'', co znacząco wpłynęło na czas realizacji zadań poszczególnych członków zespołu projektowego.
 
-Wspomniany w poprzedniej sekcji (\ref{Chapter122}. -- Zagrożenia) problem zmieniających się wymagań i specyfikacji sprawił jednak najwięcej problemów. Gdy bowiem rozwiązywane były kłopoty dotyczące nieprzystępności niektórych technologii, nierzadko trzeba było wracać do podstaw, by właśnie utworzoną funkcjonalność zmodyfikować, zapewniając zgodność z nowymi wytycznymi. Było to główną przyczyną powstawania opóźnień w realizacji projektu.
+Wspomniana w poprzedniej sekcji (\ref{Chapter122}. -- Zagrożenia) kwestia zmieniających się wymagań i specyfikacji sprawiła jednak najwięcej problemów. Niejednokrotnie zdarzały się sytuacje, kiedy prace projektowe były już w zaawansowanym stadium, a nowe wytyczne powodowały konieczność rozpoczynania pracy od podstaw. Było to główną przyczyną powstawania opóźnień w realizacji projektu.
 
 \section{Cele projektu}
 \label{Chapter13}
 
-Celem projektu \textit{iQuest} jest zbudowanie systemu umożliwiającego łatwe przeprowadzanie ankiet wśród studentów i absolwentów uczelni. System ten powinien:
+Celem projektu \textit{iQuest} jest zbudowanie jasnego, prostego, przystępnego systemu umożliwiającego prowadzenie badań wśród studentów i absolwentów uczelni. System ten powinien:
 \begin{itemize}
 \item{zapewnić spełnienie przez Uczelnię zapisów Ustawy ,,Prawo o Szkolnictwie Wyższym'' dotyczących monitorowania rozwoju absolwentów Uczelni\cite{AP:PoSW05}}
 \item{ujednolicić uczelniany system pozyskiwania informacji}
@@ -76,26 +75,26 @@ Celem projektu \textit{iQuest} jest zbudowanie systemu umożliwiającego łatwe 
 \section{Osoby realizujące projekt}
 \label{Chapter14}
 
-Projekt realizowany jest w ramach SDS (ang. \definicja{Software Development Studio}), służącego realizacji projektów informatycznych dla Wydziału Informatyki Politechniki Poznańskiej, gdzie w rolę zespołu zarządzającego wcielają się studenci studiów magisterskich (specjalizacja \definicja{Software Engineering}), zaś zespół programistów tworzą studenci ostatniego semestru studiów inżynierskich. Dla tych ostatnich, udział w SDS jest ściśle związany z pracą dyplomową inżynierską. \\
+Projekt realizowany jest w ramach Software Development Studio (SDS), służącego realizacji projektów informatycznych dla Wydziału Informatyki Politechniki Poznańskiej. W rolę zespołu zarządzającego wcielają się studenci studiów magisterskich (specjalizacja \definicja{Software Engineering}). Zespół programistów tworzą studenci ostatniego semestru studiów inżynierskich, dla których udział w SDS jest ściśle związany z pracą dyplomową inżynierską. Ich wkład w projekt znajduje się w dodatku \ref{Chapter101}. \\
 
-Szczegóły odnośnie osób realizujących projekt znajdują się w dodatku \ref{Chapter10}. Poniżej przedstawiono wykaz kompetencji poszczególnych zespołów:
+Poniżej przedstawiono wykaz kompetencji poszczególnych zespołów:
 \begin{description}
 \item[Zespół zarządzający] -- dwóch studentów, pełniących w głównej mierze role \emph{kierownika projektu} oraz \emph{architekta}, ale także wykonujący obowiązki \emph{analityka}. Kompetencje:
 \begin{itemize}
-\item Kontakt bezpośredni z klientem oraz jego przedstawicielami
-\item Decydowanie o kierunku rozwoju projektu (w tym: wybór technologii, rozwiązań, itp.)
-\item Utworzenie dokumentacji architektury projektu
-\item Tworzenie i przydzielanie zadań do zespołu programistów
+\item Kontakt bezpośredni z klientem oraz jego przedstawicielami.
+\item Decydowanie o kierunku rozwoju projektu (w tym: wybór technologii, rozwiązań, itp.).
+\item Utworzenie dokumentacji architektury projektu.
+\item Tworzenie i przydzielanie zadań do zespołu programistów.
 \end{itemize}
 \item[Zespół programistów] -- czterech studentów, pełniących role \emph{programistów}. Kompetencje:
 \begin{itemize}
-\item Przyjmowanie i realizacja zadań przydzielonych zespołowi
-\item Zgłaszanie problemów z implementacją założeń architektonicznych
-\item Opiniowanie decyzji w procesie ich podejmowania
+\item Przyjmowanie i realizacja zadań przydzielonych zespołowi.
+\item Zgłaszanie problemów z implementacją założeń architektonicznych.
+\item Opiniowanie decyzji w procesie ich podejmowania.
 \end{itemize}
 \end{description}
 
 \section{Struktura pracy}
 \label{Chapter15}
 
-Cała praca podzielona została umownie (w trakcie tworzenia) na trzy uzupełniające się części, zawierające po kilka rozdziałów. Część pierwsza, zawierająca rozdziały \ref{Chapter1}., \ref{Chapter8}. i \ref{Chapter9}. oraz sekcję \ref{Chapter62}. rozdziału \ref{Chapter6}., odnosi się do całości projektu z punktu widzenia osób go realizujących. Opisane są w niej założenia, napotkane problemy i wyciągnięte z pracy wnioski. Część druga, zawierająca rozdziały od \ref{Chapter2}. do \ref{Chapter5}., dotyczy charakterystyki projektu oraz jego architektury. Oparto ją na danych pozyskanych od zespołu zarządzającego projektem\cite{Redmine:ProjDocs}, dostępnych dla zespołu w ramach platformy \definicja{Redmine}. Część trzecia, zawierająca pozostałe rozdziały, tj. \ref{Chapter6}. i \ref{Chapter7}, przedstawia projekt od strony implementacji. Zawiera szczegółowe informacje odnośnie budowy systemu iQuest.
+Praca została podzielona umownie na trzy wzajemnie uzupełniające się części. Część pierwsza, obejmująca rozdziały \ref{Chapter1}., \ref{Chapter8}. i \ref{Chapter9}. oraz sekcję \ref{Chapter62}. rozdziału \ref{Chapter6}., odnosi się do całości projektu z punktu widzenia realizujących go osób. Opisane są w niej założenia, napotkane problemy oraz wyciągnięte wnioski. Część druga -- rozdziały od \ref{Chapter2}. do \ref{Chapter5}. -- dotyczy charakterystyki projektu oraz jego architektury. Oparto ją na danych pozyskanych od zespołu zarządzającego projektem\cite{Redmine:ProjDocs}, dostępnych dla zespołu programistów w ramach platformy \textit{Redmine}. Część trzecia, zawierająca pozostałe rozdziały, tj. \ref{Chapter6}. i \ref{Chapter7}. (z wyłączeniem sekcji \ref{Chapter62}.), przedstawia projekt od strony implementacji. Opisuje szczegółowo budowę systemu iQuest.
