--- a/thesis/02Biznes.tex
+++ b/thesis/02Biznes.tex
@@ -4,7 +4,7 @@
 \section{Wstęp}
 \label{Chapter21}
 
-System \textit{iQuest}, będący przedmiotem niniejszej Pracy Dyplomowej, jest nie tylko projektem edukacyjnym, lecz również pełnoprawnym zadaniem biznesowym. Wykonywany dla Wydziału Informatyki Politechniki Poznańskiej, traktowany jest dokładnie tak samo, jak w pełni profesjonalne zlecenia, z którymi jego uczestnikom przyjdzie się zmierzyć w przyszłości. Z tego względu, konieczna jest jego analiza w kontekście powiązanych procesów biznesowych.
+System \textit{iQuest}, będący przedmiotem niniejszej Pracy Dyplomowej, jest nie tylko projektem edukacyjnym, ale również pełnoprawnym zadaniem biznesowym. Wykonany dla Wydziału Informatyki Politechniki Poznańskiej, traktowany jest dokładnie tak samo, jak w pełni profesjonalne zlecenia, z którymi jego uczestnikom przyjdzie się zmierzyć w przyszłości. Z tego względu, konieczna jest jego analiza w kontekście powiązanych procesów biznesowych.
 
 \section{Aktorzy}
 \label{Chapter22}
@@ -61,7 +61,7 @@ Grupa studentów lub absolwentów, do których skierowana jest ankieta. Atrybuty
 \subsection{Katalog Ankiet}
 \label{Chapter234}
 
-Katalog Ankiet zawiera zbiór wszystkich Ankiet dostępnych dla danego Ankietera \textit{iQuest}. Ankiety mogą być z poziomu Katalogu Ankiet współdzielone, duplikowane, oglądane, edytowane i\slash lub usuwane, w zależności od aktualnego statusu. Dla przykładu, nowo-utworzoną Ankietę bez odpowiedzi można bez problemu usunąć lub edytować, podczas gdy taka, na którą udzielono już odpowiedzi, dostępna jest w trybie \textit{tylko do odczytu}.
+Katalog Ankiet zawiera zbiór wszystkich Ankiet dostępnych dla danego Ankietera \textit{iQuest}. Ankiety mogą być współdzielone z poziomu Katalogu Ankiet, duplikowane, oglądane, edytowane i\slash lub usuwane, w zależności od aktualnego statusu. Dla przykładu, nowo-utworzoną Ankietę bez odpowiedzi można bez problemu usunąć lub edytować, podczas gdy taka, na którą udzielono już odpowiedzi, dostępna jest w trybie \textit{tylko do odczytu}.
 
 \subsection{Pytanie}
 \label{Chapter235}
@@ -77,7 +77,7 @@ Pytanie jest elementarną jednostką Ankiety. Może składać się jedynie z tre
 \subsection{Raport}
 \label{Chapter236}
 
-Zebrane odpowiedzi z jednego lub z kilku badań. Może zawierać wykresy, zestawienia.
+Raport jest zbiorem odpowiedzi z jednego lub z kilku badań. Może zawierać wykresy i zestawienia. Funkcjonalność raportów pozwala na selektywne uzyskiwanie informacji na zadany temat.
 
 \pagebreak
 \section{Biznesowe przypadki użycia}
