--- a/thesis/03Funkcjonalne.tex
+++ b/thesis/03Funkcjonalne.tex
@@ -4,16 +4,16 @@
 \section{Wstęp}
 \label{Chapter31}
 
-Celem sprawnej realizacji celów warunkujących powstanie systemu \textit{iQuest}, musi on spełniać szereg wymagań funkcjonalnych. Obejmuje to m.in. tworzenie i prowadzenie (zarówno ze strony Ankietera, jak i Respondenta) Badań i Ankiet, a także analizę powstałych na ich podstawie zestawień danych. Ze względu na charakter projektu \textit{iQuest}, niezwykle ważną funkcjonalnością okazał się najbardziej podstawowy ze wszystkich mechanizmów -- logowanie do systemu. Koniecznością jest bowiem prawidłowa autoryzacja użytkowników systemu, podobnie jak ich uwierzytelnianie, a także współpraca z innymi systemami Uczelni.
+Sprawna realizacja celów warunkujących powstanie systemu \textit{iQuest} uzależniona jest od spełnienia szeregu wymagań funkcjonalnych. Należą do nich m.in.~tworzenie i prowadzenie (zarówno ze strony Ankietera, jak i Respondenta) badań i ankiet, a także analiza powstałych na ich podstawie zestawień danych. Ze względu na charakter projektu \textit{iQuest}, niezwykle ważną funkcjonalnością okazał się najbardziej podstawowy ze wszystkich mechanizmów -- logowanie do systemu. Prawidłowa autoryzacja użytkowników systemu, podobnie jak ich uwierzytelnianie, a także współpraca z innymi systemami Uczelni są niezbędne dla prawidłowości i wymierności prowadzonych badań.
 
 \section{Diagram przypadków użycia}
 \label{Chapter32}
 
-Na rysunku \ref{rys:UseCaseView} przedstawiono diagram przypadków użycia. W ramach systemu udostępniane są różne funkcje, możliwe do wykonania przez różnych aktorów. Dla przykładu, Ankieter może tworzyć Badania i analizować ich Statystyki oraz Raporty, podczas gdy Respondent może odpowiadać w Ankietach w ramach skierowanych do niego Badań; Administrator zarządza przydzielaniem ról; Administrator Bazy Danych zajmuje się grupami Respondentów i przydzielaniem użytkownikom praw i zezwoleń.
+Na rysunku \ref{rys:UseCaseView} przedstawiono diagram przypadków użycia. W ramach systemu udostępniane są różne funkcje, możliwe do wykonania przez różnych aktorów. Dla przykładu, ankieter może tworzyć badania i analizować ich statystyki oraz powiązane raporty, podczas gdy respondent może brać udział w badaniach odpowiadając na pytania zadawane w ramach skierowanych do niego ankiet; Administrator zarządza przydzielaniem ról; Administrator Bazy Danych (zwany też Administratorem Danych) zajmuje się grupami Respondentów i przydzielaniem użytkownikom praw i zezwoleń.
 
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/UseCaseView}
-\caption{Diagram przypadków użycia}\label{rys:UseCaseView}
+\caption{Diagram przypadków użycia (wyk. zespół zarządzający)}\label{rys:UseCaseView}
 \end{figure}
 
 \section{Ankieter}
