--- a/thesis/04Pozafunkcjonalne.tex
+++ b/thesis/04Pozafunkcjonalne.tex
@@ -118,6 +118,6 @@ Zużycie zasobów & Możliwość pracy przez ankietera\slash respondenta na śre
 
 Zważywszy, że projekt ten jest istotny dla Uczelni, dołożono wszelkich starań, aby spełnić wszystkie wymagania pozafunkcjonalne. Zadanie to zostało w sporej części wykonane dzięki zastosowaniu sprawdzonego i znanego narzędzia w roli podstawy dla całego systemu. Mowa o platformie \textit{Moodle}\footnote{Więcej informacji w rozdziale~\ref{Chapter6}, poświęconym implementacji i zastosowanym przy niej technologiom.}. Użycie jej pozwoliło m.in.~na zapewnienie modułowości systemowi. Spełniona została także adaptatywność i przenośność systemu, oparta na uniwersalności języka \textit{PHP}, jak też szerokiej gamie obsługiwanych przez \textit{Moodle} systemów baz danych. \\
 
-Zalety wykorzystania tak powszechnej technologii były -- przynajmniej w teorii -- znacznie szersze. \textit{Moodle} posiada swój własny standard kodowania, którego przy realizowaniu projektu starano się w pełni przestrzegać. To sprawia, że w połączeniu z wytycznymi \textit{DRO} (\definicja{Dział Rozwoju Oprogramowania Politechniki Poznańskiej}), dokumentacją \textit{Moodle} i dokumentacją systemu \textit{iQuest}, nakład pracy wymagany do wdrożenia się, celem rozwoju projektu, został zmniejszony. \\
+Zalety wykorzystania tak powszechnej technologii były -- przynajmniej w teorii -- znacznie szersze. \textit{Moodle} posiada swój własny standard kodowania, którego przy realizowaniu projektu starano się w pełni przestrzegać. To sprawia, że w połączeniu z wytycznymi \textit{DRO} (\definicja{Dział Rozwoju Oprogramowania Politechniki Poznańskiej}), dokumentacją \textit{Moodle} i dokumentacją systemu \textit{iQuest}, nakład pracy wymagany do wdrożenia się, w celu rozwoju projektu, został zmniejszony. \\
 
-W trakcie prac nad projektem, niemały nacisk stawiano na prawidłowe zarządzanie uprawnieniami użytkowników. Wykorzystano w tym celu mechanizmy dostępne w platformie \textit{Moodle}. Są one weryfikowane przy każdym działaniu podejmowanym przez użytkowników i zależą od przydzielonej im w systemie roli. Szczegóły tej kwestii swobodnie definiować może administracja. Ważnym jest, że osoby o roli ankietera mogą modyfikować i analizować jedynie utworzone przez siebie, lub udostępnione im bezpośrednio, badania. Podobnie działają uprawnienia przydzielone do roli respondenta -- pozwalając dokładnie jeden raz odpowiedzieć na pytania w ankietach skierowanych do grup docelowych, do których należy użytkownik.
+W trakcie prac nad projektem, niemały nacisk stawiano na prawidłowe zarządzanie uprawnieniami użytkowników. Wykorzystano w tym celu mechanizmy dostępne w platformie \textit{Moodle}. Są one weryfikowane przy każdym działaniu podejmowanym przez użytkowników i zależą od przydzielonej im w systemie roli. Szczegóły tej kwestii swobodnie definiować może administracja. Ważnym jest, że osoby pełniące rolę ankietera mogą modyfikować i analizować jedynie te badania, które zostały utworzone przez siebie lub udostępnione im bezpośrednio. Podobnie działają uprawnienia przydzielone do roli respondenta -- pozwalając dokładnie jeden raz odpowiedzieć na pytania w ankietach skierowanych do grup docelowych, do których należy użytkownik.
