--- a/thesis/06-1-Technologie-LW.tex
+++ b/thesis/06-1-Technologie-LW.tex
@@ -1,7 +1,7 @@
 \subsection{\textit{Moodle}}
 \label{Chapter631}
 
-\textit{Moodle} (ang. \definicja{Modular Object-Oriented Dynamic Learning Environment}) -- stanowi podstawę systemu \textit{iQuest}. Jest to popularna (ponad 63 miliony użytkownikiów) platforma e-learningowa o otwartym kodzie źródłowym, napisana w języku \emph{PHP}. Wyboru dokonano ze względu na kilka czynników:
+\textit{Moodle} (ang. \definicja{Modular Object-Oriented Dynamic Learning Environment}) -- stanowi podstawę systemu \textit{iQuest}. Jest to popularna (ponad 63 miliony użytkowników) platforma e-learningowa o otwartym kodzie źródłowym, napisana w języku \emph{PHP}. Wyboru dokonano ze względu na kilka czynników:
 \begin{itemize}
 \item{Propozycję Kierownika Projektu oraz następującą po niej decyzję Architekta, wynikającą z faktu, iż \textit{Moodle} posiada już implementację wielu wymaganych w \textit{iQuest} mechanizmów, jak np. konta użytkowników, system ról i uprawnień.}
 \item{Oczekiwania Klienta, wynikające z popularności platformy \textit{Moodle} wśród systemów uczelnianych.}
@@ -18,7 +18,7 @@ Dodatkowo, język \textit{PHP} jest dość przyjazny dla programisty, gdy chodzi
 \subsection{\textit{PHPUnit}}
 \label{Chapter633}
 
-Ze względu na fakt, iż programiści \textit{Moodle'a} wykonują testy jednostkowe kodu wykorzystując do tego celu \textit{PHPUnit}, zdecydowano się skorzystać z przygotowanego przez nich oprogramowania. \textit{Moodle} udostępnia dwie klasy do testowania -- \textit{basic\_testcase} i \textit{advanced\_testcase}, przy czym druga wymieniona służy do testów, które wchodzą w interakcję z bazą danych. Korzystanie z tych klas dodatkowo uprasza fakt istnienia świetnej dokumentacji technicznej\cite{Man:PHPUnit}.
+Ze względu na fakt, iż programiści \textit{Moodle'a} wykonują testy jednostkowe kodu wykorzystując do tego celu \textit{PHPUnit}, zdecydowano się skorzystać z przygotowanego przez nich oprogramowania. \textit{Moodle} udostępnia dwie klasy do testowania -- \textit{basic\_testcase} i \textit{advanced\_testcase}, przy czym druga wymieniona służy do testów, które wchodzą w interakcję z bazą danych. Korzystanie z tych klas dodatkowo uprasza fakt istnienia świetnej dokumentacji technicznej\footnote{\cite{Man:PHPUnit}}.
 
 \subsection{\textit{Selenium}}
 \label{Chapter634}
@@ -58,8 +58,8 @@ Ze względu na wymagania pozafunkcjonalne, zdecydowano się skorzystać z mechan
 \subsection{\textit{JetBrains PhpStorm}}
 \label{Chapter63a}
 
-\textit{PhpStorm} jest komercyjnym \textit{IDE} dla języka \textit{PHP} tworzonym przez firmę \textit{JetBrains}. Wykorzystano funkcjonalność odpowiedzialną za generację diagramów \textit{UML} z kodu. Wygenerowane w trybie \textit{Organic} diagramy można zobaczyć w dalszej części pracy.
+\textit{PhpStorm} jest komercyjnym \textit{IDE} dla języka \textit{PHP} tworzonym przez firmę \textit{JetBrains}, dostępnym dla studentów na licencji edukacyjnej. Dla celów niniejszej pracy dyplomowej, wykorzystano funkcjonalność odpowiedzialną za tworzenie diagramów UML z kodu. Wygenerowane w trybie \textit{Organic} diagramy można zobaczyć w dalszej części pracy (schematy \ref{rys:back-end1}., \ref{rys:back-end2}., \ref{fig:tests1}., \ref{fig:tests2}., zamieszczone w rozdziałach \ref{Chapter6}. i \ref{Chapter7}.).
 
 \subsection{\textit{HTML} oraz \textit{CSS}}
 \label{Chapter63b}
-Po stronie użytkownika, system \textit{iQuest} prezentowany jest za pośrednictwem interpretowanego przez jego przeglądarkę internetową kodu w języku \textit{HTML}. Jego wygląd, wraz z umiejscowieniem elementów, określa natomiast arkusz stylów \textit{CSS}. Realizując zadania związane z tymi technologiami, odnoszono się do profesjonalnej literatury branżowej -- m.in. ,,Wstępu do CSS3 i HTML5'' autorstwa Bartosza Danowskiego/footnote{/cite{BD:WdCiH11}}.
+Po stronie użytkownika, system \textit{iQuest} prezentowany jest za pośrednictwem interpretowanego przez jego przeglądarkę internetową kodu w języku \textit{HTML}. Jego wygląd, wraz z umiejscowieniem elementów, określa natomiast arkusz stylów \textit{CSS}. Realizując zadania związane z tymi technologiami, odnoszono się do profesjonalnej literatury branżowej\footnote{M.in. ,,Wstępu do CSS3 i HTML5'' autorstwa Bartosza Danowskiego\cite{BD:WdCiH11}}.
