--- a/thesis/06-5-Powiazanie-Logiki-Interfejsu-LW.tex
+++ b/thesis/06-5-Powiazanie-Logiki-Interfejsu-LW.tex
@@ -2,8 +2,8 @@
 \label{Chapter67}
 
 %Ja to robiłem - KU
-\textit{Moodle} jako paradygmat programowania stosuje podejście proceduralne. Natomiast logika zaprogramowanej wtyczki podejście obiektowe. Zaprojektowano więc mechanizm łączący te dwa sposoby programowania.
+\textit{Moodle} jako paradygmat programowania stosuje podejście proceduralne, natomiast logika zaprogramowanej wtyczki -- podejście obiektowe. Zaprojektowano więc mechanizm łączący te dwa sposoby programowania.
 
-Mechanizm łączący stosuje podejście proceduralne. Zaimplementowano szereg dodatkowych funkcji, które operują na danych zwracanych przez formularze. Zamiast zapisywać je bezpośrednio do bazy danych, tworzą najpierw obiekty, które dopiero później zapisywane są do bazy. Cały proces odbywa się po stronie serwera i jest zapisany w języku PHP. 
+Mechanizm łączący stosuje podejście proceduralne. Zaimplementowano szereg dodatkowych funkcji, które operują na danych zwracanych przez formularze. Zamiast bezpośredniego zapisu do bazy danych, tworzone są najpierw obiekty, które dopiero później zapisywane są do bazy. Cały proces odbywa się po stronie serwera i jest zapisany w języku \textit{PHP}. 
 
-Mimo większej złożoności, zastosowano ten sposób, aby w jak największej części projektu użyć programowania obiektowego, które pozwala na lepszą organizację kodu, a przez to np. na szybsze wykrycie ewentualnych błędów oraz minimalizację powielania kodu. Oczywiście są to tylko niektóre z zalet programowania obiektowego.
+Mimo większej złożoności, zastosowanie tej metody pozwoliło zmaksymalizować część projektu wykonaną z użyciem programowania obiektowego, pozwalającego na lepszą organizację kodu, a co za tym idzie, także szybszego wykrycie ewentualnych błędów oraz minimalizację powielania kodu. Oczywiście są to tylko niektóre z zalet programowania obiektowego.
