--- a/thesis/09Zakonczenie.tex
+++ b/thesis/09Zakonczenie.tex
@@ -4,13 +4,13 @@
 \section{Podsumowanie}
 \label{Chapter91}
 
-Rozwijanie istniejącego oprogramowania wymaga dużo większego nakładu pracy niż konstrukcja oprogramowania od podstaw. Wiele czasu poświęca się na analizę rozwiązań zastosowanych przez twórców rozwiązania bazowego. W trakcie implementacji pojawiają się problemy, których rozwiązania szuka się długimi godzinami; niektórych nie udaje się w ogóle rozwiązać, co z kolei prowadzi do modyfikacji czyjegoś oprogramowania (ang. \textit{hacking}). Praca nad oprogramowaniem, którego tworzenie zaczęło się przed ponad dziesięcioma laty, wymaga pracy z rozwiązaniami architektonicznymi, które dawno zostały już zarzucone (np. \textit{transaction script} porzucono na rzecz \textit{Model View Controller}). Dodatkową trudnością są zmieniające się lub niewspierane już interfejsy programowania aplikacji. Wymienione problemy dotyczą szczególnie obszernego oprogramowania, właśnie takiego z jakim przyszło nam pracować -- \textit{Moodle} to wg programu \textit{CLOC} ponad 2 miliony linii kodu. Uważamy, że decyzja architekta odnośnie rozwijania systemu \textit{Moodle} była błędna i nieprzemyślana, zwłaszcza w kontekście braku doświadczenia osób należących do zespołu programistów. Potwierdzenie naszych wniosków widzimy chociażby porównując wydajność pracy zespołu z innymi zespołami realizującymi projekty w ramach \textit{Software Development Studio}.
+Realizacja projektu obejmującego utworzenie systemu \textit{iQuest} została zakończona sukcesem. Platforma \textit{Moodle}, w połączeniu z autorskimi wtyczkami składającymi się na system \textit{iQuest} zapewnia pełnię zleconej funkcjonalności, spełniając zarazem wymagania przedstawione w niniejszym dokumencie. \\
 
-Możliwość współpracy z SDS była niewątpliwie zaletą. Po pierwsze, projekt, który należało wykonać był bardzo złożony. Dzięki dwóm dodatkowym osobom część pracy związaną z projektowaniem systemu, można było przerzucić, a dzięki temu, zająć się jedynie implementacją. Po drugie, wszystkie ewentualnie spory można było szybko rozwiązać, pytając o zdanie architekta, nie tracąc tym samym czasu na niepotrzebne kłótnie, które podejście jest lepsze. Po trzecie, udostępniony system \textit{Redmine} znacząco polepsza organizację pracy. Dzięki ,,śledzeniu zagadnień'' można lepiej organizować czas, co więcej, każdy wie, co ma robić. Nie bez znaczenia jest też możliwość korzystania z repozytorium \textit{SVN}. Wyposażony pokój jest udogodnieniem, które wpływa na lepszą komunikację w zespole. Korzyścią wynikającą z zadanej nam organizacji pracy jest konieczność trzymania się terminów, dzięki której nasz ostatni semestr studiów inżynierskich był dobrze zaplanowany pod względem równomiernego rozkładu pracochłonności.
+Dzięki wdrożeniu systemu \textit{iQuest}, Politechnika Poznańska uzyska dostęp do niezbędnego narzędzia prowadzenia badań wśród swoich absolwentów w rozumieniu ustawy ,,Prawo o Szkolnictwie Wyższym''. Jest to znaczący krok w stronę lepszego poznania potrzeb rynku, zarówno pracodawców, jak i samych studentów, pozwalający usprawnić mechanizmy zapewniania jakości kształcenia funkcjonujące na uczelni. \\
 
-Na dzień sporządzania niniejszej pracy dyplomowej, można więc śmiało stwierdzić, że wbrew pojawiającym się na drodze przeciwnościom, realizacja projektu \textit{iQuest} zakończone zostało sukcesem. Platforma \textit{Moodle}, w połączeniu z autorskimi wtyczkami składającymi się na system \textit{iQuest} zapewnia pełnię zleconej funkcjonalności. Autorzy niniejszej pracy wyrażają więc nadzieję, że utworzony przez nich system zostanie ciepło przyjęty przez studentów, absolwentów oraz prowadzących.
+Udział w tak dużym i znaczącym dla Politechniki Poznańskiej projekcie przyczynił się do znaczącego rozwoju jego uczestników. Pozyskali oni wiele cennych doświadczeń i wyciągnęli znaczną liczbę najróżniejszych wniosków. Autorzy niniejszej pracy dyplomowej wyrażają więc nadzieję, że utworzony przez nich system zostanie pozytywnie przyjęty przez studentów, absolwentów oraz prowadzących.
 
 \section{Propozycja dalszych prac}
 \label{Chapter92}
 
-Podczas spotkania z reprezentantami Działu Rozwoju Oprogramowania poruszony został temat etykietowania (ang. tag) badań. Proponowany mechanizm z pewnością usprawniłby proces wyszukiwania badań. W obecnej wersji systemu zachętą dla studentów do wypełniania ankiet są materiały publikowane przez wykładowców uczelni, do których dostęp przyznawany jest użytkownikom, którzy w określonym czasie udzielili odpowiedzi w dowolnym badaniu. W przyszłości mechanizm ten można by rozbudować o wirtualną walutę służącą do ,,wykupowania'' dostępu do publikowanych materiałów. Dodatkowo, warto rozważyć wprowadzenie nowych typów pytań (np. skali jednokrotnego wyboru).
+Podczas spotkania z reprezentantami Działu Rozwoju Oprogramowania poruszony został temat etykietowania (ang. tag) badań. Proponowany mechanizm z pewnością usprawniłby proces wyszukiwania badań. W obecnej wersji systemu zachętą dla studentów do wypełniania ankiet są materiały publikowane przez wykładowców uczelni, do których dostęp przyznawany jest użytkownikom, którzy w określonym czasie udzielili odpowiedzi w dowolnym badaniu. W przyszłości mechanizm ten można zastąpić możliwością subskrypcji (wykupu) dostępu do publikowanych materiałów z wykorzystaniem wirtualnej waluty (np.~punktów za udział w badaniach).
