--- a/thesis/10Dodatki.tex
+++ b/thesis/10Dodatki.tex
@@ -1,7 +1,7 @@
 \chapter{Informacje uzupełniające}
 \label{Chapter10}
 
-\section{Wkład poszczególnych osób do przedsięwzięcia}
+\section{Wkład poszczególnych osób w przedsięwzięcie}
 \label{Chapter101}
 
 Skład zespołu pracującego nad projektem został przedstawiony w tablicy \ref{tab:roster}.
@@ -36,7 +36,7 @@ Odpowiedzialność za utworzenie treści niniejszej pracy dyplomowej została pr
 
 \begin{itemize}
 \item Edycja i dostosowanie szablonu pracy w środowisku \LaTeX
-\item Redakcja całej pracy, włącznie z częściami pozostałych autorów
+\item Redakcja całej pracy, włącznie z częściami współautorów
 \item Pozyskanie, przetworzenie i zamieszczenie materiałów zewnętrznych
 \item Pozyskanie, przetworzenie i zamieszczenie materiałów pochodzących od zespołu zarządzającego
 \item Rozdział 1 -- Wprowadzenie
@@ -45,6 +45,7 @@ Odpowiedzialność za utworzenie treści niniejszej pracy dyplomowej została pr
 \item Rozdział 8 -- Wnioski - część własna
 \item Rozdział 9 -- Zakończenie
 \item Dodatki
+\item Zrzuty ekranowe
 \end{itemize}
 \noindent
 
@@ -75,13 +76,14 @@ Odpowiedzialność za utworzenie treści niniejszej pracy dyplomowej została pr
 \item Rozdział 6.6 -- Logika (back-end)
 \item Rozdział 7.1.2 -- Testy jednostkowe
 \item Rozdział 8 -- Wnioski - część własna
+\item Część grafik (z odpowiednim odniesieniem w etykiecie)
 \end{itemize}
 \noindent
 
 \item Zespół zarządzający projektem (Marcin Domański, Błażej Matuszyk)
 
 \begin{itemize}
-\item Materiały wskazane w bibliografii\cite{Redmine:ProjDocs}, zastosowane jako baza dla rozdziałów 1-5
+\item Materiały\cite{Redmine:ProjDocs}, zastosowane jako podstawa dla rozdziałów 1-5
 \item Część grafik (z odpowiednim odniesieniem w etykiecie)
 \end{itemize}
 \noindent
@@ -129,9 +131,9 @@ Odpowiedzialność za część implementacyjną systemu została przedstawiona p
 \end{description}
 
 %\noindent
-Serdeczne podziękowania należą się Promotorowi niniejszej pracy dyplomowej, dr inż. Bartoszowi Walterowi, który  wytrwale wspierał autorów przy realizacji ich zadań. Podobnie, podziękowania należą się prowadzącemu przedmiot ,,Pracownia inżynierska'', dr inż. Grzegorzowi Pawlakowi, aktywnie motywującego zespół do wytężonej pracy. \\
+Autorzy niniejszej pracy dyplomowej inżynierskiej składają serdeczne podziękowania Promotorowi, dr. inż. Bartoszowi Walterowi, który wytrwale wspierał ich przy realizacji zadań związanych z projektem, oraz dr. inż. Grzegorzowi Pawlakowi, prowadzącemu przedmiot ,,Pracownia inżynierska'', za aktywne motywowanie ich do wytężonej pracy. \\
 
-Dodatkowe podziękowania należą się zespołowi zarządzającemu, przygotowane przez który materiały, choć wymagające znaczącej redakcji, pomogły w utworzeniu niniejszej pracy dyplomowej. Autorzy niniejszej pracy dyplomowej chcieliby także podziękować opiekunom \textit{SDS}, w tym w szczególności mgr inż. Sylwii Kopczyńskiej, za niewyczerpaną wiarę w ich (w rozumieniu: zespołu programistów) możliwości.
+Podziękowania należą się także zespołowi zarządzającemu oraz opiekunom \textit{SDS}, w tym w szczególności mgr inż. Sylwii Kopczyńskiej, za przygotowanie wymaganych materiałów źródłowych oraz niewyczerpaną wiarę w możliwości zespołu programistów.
 
 \section{Wykaz użytych narzędzi i technologii}
 \label{ChapterA4}
