--- a/thesis/11DodatkiB.tex
+++ b/thesis/11DodatkiB.tex
@@ -3,35 +3,35 @@
 
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-logowanie}
-\caption{Logowanie do systemu \textit{iQuest}}\label{rys:Logowanie}
+\caption{Logowanie do systemu \textit{iQuest} (wyk. Krzysztof Marian Borowiak)}\label{rys:Logowanie}
 \end{figure}
 
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-stronaglowna}
-\caption{Strona główna systemu \textit{iQuest} -- widok ankietera}\label{rys:StronaGlowna}
+\caption{Strona główna systemu \textit{iQuest} -- widok ankietera (wyk. Krzysztof Marian Borowiak)}\label{rys:StronaGlowna}
 \end{figure}
 
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-dodawaniebadania}
-\caption{Dodawanie badania w systemie \textit{iQuest}}\label{rys:DodawanieBadania}
+\caption{Dodawanie badania w systemie \textit{iQuest} (wyk. Krzysztof Marian Borowiak)}\label{rys:DodawanieBadania}
 \end{figure}
 
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-tworzenieankiety}
-\caption{Tworzenie ankiety w systemie \textit{iQuest} -- wybór typu pytania}\label{rys:TworzenieAnkiety}
+\caption{Tworzenie ankiety w systemie \textit{iQuest} -- wybór typu pytania (wyk. Krzysztof Marian Borowiak)}\label{rys:TworzenieAnkiety}
 \end{figure}
 
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-tworzenieankiety2}
-\caption{Tworzenie ankiety w systemie \textit{iQuest} -- modyfikacja pytania}\label{rys:TworzenieAnkiety2}
+\caption{Tworzenie ankiety w systemie \textit{iQuest} -- modyfikacja pytania (wyk. Krzysztof Marian Borowiak)}\label{rys:TworzenieAnkiety2}
 \end{figure}
 
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-wyborbadania}
-\caption{Lista badań dostępna dla respondenta}\label{rys:WyborBadania}
+\caption{Lista badań dostępna dla respondenta (wyk. Krzysztof Marian Borowiak)}\label{rys:WyborBadania}
 \end{figure}
 
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/kb/W2-odpowiadanienanakiete}
-\caption{Interfejs ankiety dla respondenta}\label{rys:OdpowiadanieNaAnkiete}
+\caption{Interfejs ankiety dla respondenta (wyk. Krzysztof Marian Borowiak)}\label{rys:OdpowiadanieNaAnkiete}
 \end{figure}
