--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -27,7 +27,7 @@ year = {{2010}}
 author = {Bartosz Danowski},
 title = {Wstęp do CSS3 i HTML5},
 publisher = {Helion},
-year = {2011},
+year = {2011}
 }
 
 @Book{EQMG:PiMKp07,
@@ -68,9 +68,9 @@ howpublished = {{[on-line] \url{https://help.ubuntu.com}}
 }
 
 @misc{W3C:SOAP07,
-	author = {{World Wide Web Consortium (W3C)}},
-	title = {{SOAP Version 1.2 Part 1: Messaging Framework (Second Edition)}},
-	howpublished = {{[on-line] \url{http://www.w3.org/TR/soap12-part1/}}}
+	author = {World Wide Web Consortium (W3C)},
+	title = {SOAP Version 1.2 Part 1: Messaging Framework (Second Edition)},
+	howpublished = {[on-line] \url{http://www.w3.org/TR/soap12-part1/}}
 }
 
 @misc{IP:Awbi,
