--- a/thesis/thesis-bachelor-polski.tex
+++ b/thesis/thesis-bachelor-polski.tex
@@ -14,11 +14,41 @@
 \usepackage{multirow}
 \usepackage{pdfpages}
 
-\hyphenation{roz-sze-rza-ją-cych}
+\sloppy
+%Zamiast wjazdu na prawy margines, będzie rozrzedzał linię (jak w Wordzie).
+
+\hyphenation{a-ktu-a-li-za-cją}
+\hyphenation{a-na-li-za}
+\hyphenation{a-na-li-zę}
+\hyphenation{an-kiet}
+\hyphenation{an-kie-to-wa-ne-go}
+\hyphenation{an-kie-ty}
+\hyphenation{fun-kcjo-nal-ne}
+\hyphenation{Jasper-Reports}
+\hyphenation{nie-ste-ty}
+\hyphenation{o-sob-no}
+\hyphenation{po-za-fun-kcjo-nal-ne}
 \hyphenation{pra-co-wni-ków}
-\hyphenation{za-ga-dnie-nia-mi}
-\hyphenation{JasperReports}
+\hyphenation{re-a-li-za-cji}
 \hyphenation{redmine}
+\hyphenation{roz-sze-rza-ją-cych}
+\hyphenation{ser-we-ra}
+\hyphenation{speł-nie-nia}
+\hyphenation{spra-wia-ły}
+\hyphenation{u-czel-nia-nych}
+\hyphenation{u-miesz-czo-no}
+\hyphenation{u-praw-nie-nia-mi}
+\hyphenation{u-two-rze-nie}
+\hyphenation{u-wie-rzy-tel-nia-nia}
+\hyphenation{u-żyt-ko-wni-ka}
+\hyphenation{u-żyt-ko-wni-ków}
+\hyphenation{wy-ge-ne-ro-wa-ne}
+\hyphenation{za-ga-dnie-nia-mi}
+\hyphenation{za-miesz-czo-no}
+\hyphenation{ze-sta-wień}
+\hyphenation{zmia-ny}
+\hyphenation{zmien-nej}
+\hyphenation{znaj-du-ją}
 
 % Authors of the thesis here. Separate them with \and
 \author{%
@@ -27,7 +57,7 @@
    Krzysztof Urbaniak \album{94381} \and 
    Łukasz Wieczorek \album{94385}}
 \title{iQuest -- system rozszerzonych ankiet~studenckich}                   % Note how we protect the final title phrase from breaking
-\ppsupervisor{dr hab.~inż.~Bartosz Walter} % Your supervisor comes here.
+\ppsupervisor{dr inż.~Bartosz Walter} % Your supervisor comes here.
 \ppyear{2013}                                         % Year of final submission (not graduation!)
 
 \begin{document}
